--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
     "start": "NODE_ENV=production node app.js"
   },
   "dependencies": {
-    "express": "~4.12.0",
-    "serve-favicon": "~2.2.0",
-    "morgan": "~1.5.0",
-    "cookie-parser": "~1.3.3",
     "body-parser": "~1.12.0",
+    "composable-middleware": "^0.3.0",
     "compression": "~1.4.1",
-    "method-override": "~2.3.0",
+    "connect-mongo": "^0.8.1",
+    "cookie-parser": "~1.3.3",
+    "express": "~4.12.0",
+    "express-handlebars": "~2.0.1",
+    "express-jwt": "^3.0.1",
+    "express-session": "^1.11.2",
     "glob": "~5.0.3",
+    "jsonwebtoken": "^5.0.1",
+    "method-override": "~2.3.0",
     "mongoose": "~4.0.1",
-    "express-handlebars": "~2.0.1"
+    "morgan": "~1.5.0",
+    "node-uuid": "^1.4.3",
+    "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
+    "passport-google-oauth": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3",
+    "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
