--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "NODE_ENV=production node app.js"
   },
   "dependencies": {
+    "async": "^1.3.0",
     "body-parser": "~1.12.0",
     "composable-middleware": "^0.3.0",
     "compression": "~1.4.1",
