--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node app.js"
+    "start": "NODE_ENV=production node app.js",
+    "test": "NODE_ENV=ccmtest node app.js"
   },
   "dependencies": {
     "async": "^1.3.0",
