Updated documentation Closes issue #6

--- a/docs/api_project.json
+++ b/docs/api_project.json
@@ -9,14 +9,16 @@
     "Events",
     "Signups",
     "Messages",
+    "Talks",
     "Topics",
     "Locations",
-    "Groups"
+    "Groups",
+    "Users"
   ],
   "apidoc": "0.2.0",
   "generator": {
     "name": "apidoc",
-    "time": "2015-08-16T18:51:09.217Z",
+    "time": "2015-09-08T03:05:23.230Z",
     "url": "http://apidocjs.com",
     "version": "0.13.1"
   }
