--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-develop": "~0.4.0",
     "grunt-sass": "~0.18.0",
-    "grunt-contrib-watch": "~0.6.1",
+    "load-grunt-tasks": "~3.1.0",
+    "node-uuid": "^1.4.3",
     "request": "~2.55.0",
-    "time-grunt": "~1.1.0",
-    "load-grunt-tasks": "~3.1.0"
+    "time-grunt": "~1.1.0"
   }
 }
