--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "NODE_ENV=ccmtest node app.js"
   },
   "dependencies": {
-    "async": "^1.3.0",
+    "async": "^1.4.2",
     "body-parser": "~1.12.0",
     "composable-middleware": "^0.3.0",
     "compression": "~1.4.1",
@@ -18,6 +18,8 @@
     "express-jwt": "^3.0.1",
     "express-session": "^1.11.2",
     "glob": "~5.0.3",
+    "google-auth-library": "^0.9.6",
+    "googleapis": "^2.1.5",
     "jsonwebtoken": "^5.0.1",
     "method-override": "~2.3.0",
     "mongoose": "~4.0.1",
@@ -28,7 +30,8 @@
     "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "xml2js": "^0.4.12"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
