--- a/docs/api_project.json
+++ b/docs/api_project.json
@@ -10,6 +10,7 @@
     "Signups",
     "Conversations",
     "Talks",
+    "Broadcasts",
     "Messages",
     "Topics",
     "Locations",
@@ -19,7 +20,7 @@
   "apidoc": "0.2.0",
   "generator": {
     "name": "apidoc",
-    "time": "2015-10-09T02:57:21.045Z",
+    "time": "2015-10-13T00:54:17.676Z",
     "url": "http://apidocjs.com",
     "version": "0.13.1"
   }
